--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -20,7 +20,7 @@
 
     <form>
       <label for="bill">Bill</label><br>
-      <input type="number" id="bill" name="bill" placeholder="0">
+      <input type="number" step="0.01" id="bill" name="bill" placeholder="0">
     </form>
 
     <h1>Select Tip %</h1>
@@ -55,9 +55,10 @@
         <p>/ person</p>
       </div>
 
-      <a href=#>Reset</a>
+      <a href=# id="reset">Reset</a>
     </div>
   </div>
 
+  <script src="javascript/app.js"></script>
 </body>
 </html>
