--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -25,11 +25,11 @@
 
     <h1>Select Tip %</h1>
     <ul>
-      <li><a href="#">5%</a></li>
-      <li><a href="#">10%</a></li>
-      <li><a href="#">15%</a></li>
-      <li><a href="#">25%</a></li>
-      <li><a href="#">50%</a></li>
+      <li><a href="#" id="5">5%</a></li>
+      <li><a href="#" id="10">10%</a></li>
+      <li><a href="#" id="15">15%</a></li>
+      <li><a href="#" id="25">25%</a></li>
+      <li><a href="#" id="50">50%</a></li>
       <li><input type="number" id="custom" name="custom" placeholder="Custom"></li>
     </ul>
     
