--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -26,11 +26,11 @@
 
     <h1>Select Tip %</h1>
     <ul>
-      <li><button type="button" id="0.05" class="buttons">5%</button></li>
-      <li><button type="button" id="0.1" class="buttons">10%</button></li>
-      <li><button type="button" id="0.15" class="buttons">15%</button></li>
-      <li><button type="button" id="0.25" class="buttons">25%</button></li>
-      <li><button type="button" id="0.5" class="buttons">50%</button></li>
+      <li><button id="5" class="buttons">5%</button></li>
+      <li><button id="10" class="buttons">10%</button></li>
+      <li><button id="15" class="buttons">15%</button></li>
+      <li><button id="25" class="buttons">25%</button></li>
+      <li><button id="50" class="buttons">50%</button></li>
       <li><input type="number" id="custom" name="custom" placeholder="Custom"></li>
     </ul>
     
